Pushing code with hits based on position in the documents

--- a/Flask_server/testing_notebook.ipynb
+++ b/Flask_server/testing_notebook.ipynb
@@ -129,19 +129,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
+   "execution_count": 1,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                                                    today  friday  jan    1  \\\nabcnews--2021-01-01--Today in History                 2.0     1.0  2.0  2.0   \nabcnews--2021-01-02--Today in History                 3.0     NaN  2.0  1.0   \nabcnews--2021-01-02--VIRUS TODAY: Few Native Am...    2.0     NaN  1.0  1.0   \nabcnews--2021-01-03--Today in History                 2.0     NaN  2.0  NaN   \nabcnews--2021-01-03--Small-town Alabama residen...    1.0     NaN  NaN  NaN   \n...                                                   ...     ...  ...  ...   \nabcnews--2021-07-10--A Confederate statue in Ch...    NaN     NaN  NaN  NaN   \nabcnews--2021-05-06--Atlanta Mayor Keisha Lance...    NaN     NaN  NaN  NaN   \nabcnews--2021-05-14--Commission formed to obser...    NaN     NaN  NaN  NaN   \nabcnews--2021-03-09--A key panel has voted to r...    NaN     NaN  NaN  NaN   \nabcnews--2021-08-29--Forecasters: Tropical Stor...    NaN     NaN  NaN  NaN   \n\n                                                    first  day  2021  364  \\\nabcnews--2021-01-01--Today in History                 4.0  4.0   1.0  1.0   \nabcnews--2021-01-02--Today in History                 4.0  3.0   1.0  NaN   \nabcnews--2021-01-02--VIRUS TODAY: Few Native Am...    NaN  3.0   NaN  NaN   \nabcnews--2021-01-03--Today in History                 NaN  3.0   1.0  NaN   \nabcnews--2021-01-03--Small-town Alabama residen...    2.0  NaN   NaN  NaN   \n...                                                   ...  ...   ...  ...   \nabcnews--2021-07-10--A Confederate statue in Ch...    NaN  NaN   NaN  NaN   \nabcnews--2021-05-06--Atlanta Mayor Keisha Lance...    NaN  NaN   NaN  NaN   \nabcnews--2021-05-14--Commission formed to obser...    NaN  NaN   NaN  NaN   \nabcnews--2021-03-09--A key panel has voted to r...    NaN  NaN   NaN  NaN   \nabcnews--2021-08-29--Forecasters: Tropical Stor...    NaN  NaN   NaN  NaN   \n\n                                                    left  year  ...  \\\nabcnews--2021-01-01--Today in History                1.0   5.0  ...   \nabcnews--2021-01-02--Today in History                1.0   4.0  ...   \nabcnews--2021-01-02--VIRUS TODAY: Few Native Am...   NaN   2.0  ...   \nabcnews--2021-01-03--Today in History                2.0   7.0  ...   \nabcnews--2021-01-03--Small-town Alabama residen...   NaN   2.0  ...   \n...                                                  ...   ...  ...   \nabcnews--2021-07-10--A Confederate statue in Ch...   NaN   NaN  ...   \nabcnews--2021-05-06--Atlanta Mayor Keisha Lance...   NaN   NaN  ...   \nabcnews--2021-05-14--Commission formed to obser...   NaN   NaN  ...   \nabcnews--2021-03-09--A key panel has voted to r...   NaN   NaN  ...   \nabcnews--2021-08-29--Forecasters: Tropical Stor...   NaN   NaN  ...   \n\n                                                    dimondstein  satish  \\\nabcnews--2021-01-01--Today in History                       NaN     NaN   \nabcnews--2021-01-02--Today in History                       NaN     NaN   \nabcnews--2021-01-02--VIRUS TODAY: Few Native Am...          NaN     NaN   \nabcnews--2021-01-03--Today in History                       NaN     NaN   \nabcnews--2021-01-03--Small-town Alabama residen...          NaN     NaN   \n...                                                         ...     ...   \nabcnews--2021-07-10--A Confederate statue in Ch...          NaN     NaN   \nabcnews--2021-05-06--Atlanta Mayor Keisha Lance...          NaN     NaN   \nabcnews--2021-05-14--Commission formed to obser...          NaN     NaN   \nabcnews--2021-03-09--A key panel has voted to r...          NaN     NaN   \nabcnews--2021-08-29--Forecasters: Tropical Stor...          NaN     NaN   \n\n                                                    jindel  precar  898  1221  \\\nabcnews--2021-01-01--Today in History                  NaN     NaN  NaN   NaN   \nabcnews--2021-01-02--Today in History                  NaN     NaN  NaN   NaN   \nabcnews--2021-01-02--VIRUS TODAY: Few Native Am...     NaN     NaN  NaN   NaN   \nabcnews--2021-01-03--Today in History                  NaN     NaN  NaN   NaN   \nabcnews--2021-01-03--Small-town Alabama residen...     NaN     NaN  NaN   NaN   \n...                                                    ...     ...  ...   ...   \nabcnews--2021-07-10--A Confederate statue in Ch...     NaN     NaN  NaN   NaN   \nabcnews--2021-05-06--Atlanta Mayor Keisha Lance...     NaN     NaN  NaN   NaN   \nabcnews--2021-05-14--Commission formed to obser...     NaN     NaN  NaN   NaN   \nabcnews--2021-03-09--A key panel has voted to r...     NaN     NaN  NaN   NaN   \nabcnews--2021-08-29--Forecasters: Tropical Stor...     NaN     NaN  NaN   NaN   \n\n                                                    ontim  fredric  clauson  \\\nabcnews--2021-01-01--Today in History                 NaN      NaN      NaN   \nabcnews--2021-01-02--Today in History                 NaN      NaN      NaN   \nabcnews--2021-01-02--VIRUS TODAY: Few Native Am...    NaN      NaN      NaN   \nabcnews--2021-01-03--Today in History                 NaN      NaN      NaN   \nabcnews--2021-01-03--Small-town Alabama residen...    NaN      NaN      NaN   \n...                                                   ...      ...      ...   \nabcnews--2021-07-10--A Confederate statue in Ch...    NaN      NaN      NaN   \nabcnews--2021-05-06--Atlanta Mayor Keisha Lance...    NaN      NaN      NaN   \nabcnews--2021-05-14--Commission formed to obser...    NaN      NaN      NaN   \nabcnews--2021-03-09--A key panel has voted to r...    NaN      NaN      NaN   \nabcnews--2021-08-29--Forecasters: Tropical Stor...    NaN      NaN      NaN   \n\n                                                    frazzl  \nabcnews--2021-01-01--Today in History                  NaN  \nabcnews--2021-01-02--Today in History                  NaN  \nabcnews--2021-01-02--VIRUS TODAY: Few Native Am...     NaN  \nabcnews--2021-01-03--Today in History                  NaN  \nabcnews--2021-01-03--Small-town Alabama residen...     NaN  \n...                                                    ...  \nabcnews--2021-07-10--A Confederate statue in Ch...     NaN  \nabcnews--2021-05-06--Atlanta Mayor Keisha Lance...     NaN  \nabcnews--2021-05-14--Commission formed to obser...     NaN  \nabcnews--2021-03-09--A key panel has voted to r...     NaN  \nabcnews--2021-08-29--Forecasters: Tropical Stor...     NaN  \n\n[10006 rows x 55210 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>today</th>\n      <th>friday</th>\n      <th>jan</th>\n      <th>1</th>\n      <th>first</th>\n      <th>day</th>\n      <th>2021</th>\n      <th>364</th>\n      <th>left</th>\n      <th>year</th>\n      <th>...</th>\n      <th>dimondstein</th>\n      <th>satish</th>\n      <th>jindel</th>\n      <th>precar</th>\n      <th>898</th>\n      <th>1221</th>\n      <th>ontim</th>\n      <th>fredric</th>\n      <th>clauson</th>\n      <th>frazzl</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>abcnews--2021-01-01--Today in History</th>\n      <td>2.0</td>\n      <td>1.0</td>\n      <td>2.0</td>\n      <td>2.0</td>\n      <td>4.0</td>\n      <td>4.0</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>5.0</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>abcnews--2021-01-02--Today in History</th>\n      <td>3.0</td>\n      <td>NaN</td>\n      <td>2.0</td>\n      <td>1.0</td>\n      <td>4.0</td>\n      <td>3.0</td>\n      <td>1.0</td>\n      <td>NaN</td>\n      <td>1.0</td>\n      <td>4.0</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>abcnews--2021-01-02--VIRUS TODAY: Few Native Americans sign up for virus trials</th>\n      <td>2.0</td>\n      <td>NaN</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>NaN</td>\n      <td>3.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>2.0</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>abcnews--2021-01-03--Today in History</th>\n      <td>2.0</td>\n      <td>NaN</td>\n      <td>2.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>3.0</td>\n      <td>1.0</td>\n      <td>NaN</td>\n      <td>2.0</td>\n      <td>7.0</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>abcnews--2021-01-03--Small-town Alabama resident transformed to protest leader</th>\n      <td>1.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>2.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>2.0</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>abcnews--2021-07-10--A Confederate statue in Charlottesville that helped spark a violent 2017 rally is lifted off its ped</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>abcnews--2021-05-06--Atlanta Mayor Keisha Lance Bottoms announces in letter that she won't seek reelection</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>abcnews--2021-05-14--Commission formed to observe the 100th anniversary of Tulsa Race Massacre boots Oklahoma Gov. Kevin</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>abcnews--2021-03-09--A key panel has voted to remove a bust of Confederate Gen. Nathan Bedford Forrest from the Tennessee</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>abcnews--2021-08-29--Forecasters: Tropical Storm Julian forms in Atlantic Ocean; no threat to land</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n<p>10006 rows × 55210 columns</p>\n</div>"
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
+   ],
+   "source": [
+    "\n",
+    "import pandas as pds\n",
+    "import json\n",
+    "\n",
+    "\n",
+    "open_file = open(\"output_test.json\", 'r')\n",
+    "file_data = open_file.read()\n",
+    "pds.DataFrame(json.loads(file_data))\n"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "IOPub data rate exceeded.\n",
+      "The notebook server will temporarily stop sending output\n",
+      "to the client in order to avoid crashing it.\n",
+      "To change this limit, set the config variable\n",
+      "`--NotebookApp.iopub_data_rate_limit`.\n",
+      "\n",
+      "Current values:\n",
+      "NotebookApp.iopub_data_rate_limit=1000000.0 (bytes/sec)\n",
+      "NotebookApp.rate_limit_window=3.0 (secs)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "from time import time\n",
+    "\n",
+    "open_file = open(\"output_test1.json\", 'r')\n",
+    "file_data = open_file.read()\n",
+    "file1_data = json.loads(file_data)\n",
+    "data = input(\"Enter Here: \")\n",
+    "x1 = time()\n",
+    "hassan = file1_data[data]\n",
+    "print(hassan)\n",
+    "print(time()-x1)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
